# floatingobjects

./: .gitignore  environment.yml  requirements.txt  setup.cfg  test.py
code/: .gitignore
code/floatingobjects/: create_overview_table.py  data.py  model.py  predictor.py  transforms.py  visualization.py
floatingobjects/: data.py  main.py  model.py  predictor.py  sota.py  train.py  transforms.py  visualization.py
tests/: dataset.py
