[metadata]
name = floatingobjects
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ESA-PhiLab/floatingobjects
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = floatingobjects